@@ -4,6 +4,8 @@
 	New Features
 	
 	Changes
+		* Basic and Advanced Menu examples added
+		* Documentation added to previous examples
 	
 	Bug Fixes
 
